feat(Locations): Add location and categories
